<resources>
    <string name="app_name">TicketsDealer</string>
    <string name="contributor">Florian BADENS - Vincent GUENAT</string>
    <string name="title_activity_accueil">Accueil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_accueil_test">TicketsDealer</string>
    <string name="title_activity_conditions_generales">Conditions Générales</string>
    <string name="general_terms">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis turpis urna, vel faucibus purus laoreet quis. Curabitur accumsan sed turpis non tristique. Nullam molestie et nunc ut interdum. Sed tincidunt, velit sit amet pulvinar vehicula, neque eros finibus odio, quis suscipit sapien ante non dui. Fusce eget aliquet metus, et suscipit ligula. Donec in mi eget eros elementum consequat. Pellentesque euismod fermentum dolor quis vehicula. Sed ut diam ut est placerat viverra sit amet at leo. Vestibulum sem lorem, pellentesque nec lacinia eget, commodo vitae odio. Donec at elementum elit. Vestibulum sagittis finibus egestas.\n\n
Cras eget molestie dolor. Proin eleifend maximus quam, et rutrum diam aliquam quis. Sed facilisis vehicula mauris vitae tempus. Proin eleifend viverra laoreet. Aliquam volutpat magna vitae rhoncus pretium. Integer at leo id purus tincidunt molestie. Quisque eu erat sed enim elementum vulputate. Cras metus lacus, fermentum non lobortis sit amet, convallis eget tortor. Nullam in diam vulputate, dapibus quam id, pellentesque massa. Cras egestas libero in congue pellentesque. Cras elementum cursus tellus sit amet finibus. Vestibulum eu nisl erat. Mauris aliquam tellus ac neque aliquet, eu sagittis est interdum. Donec elementum suscipit risus, nec ultricies dolor sollicitudin eget. Vestibulum porta felis nec elit vulputate mattis quis ut nisi. Pellentesque tincidunt sapien quis diam porta tincidunt.\n\n
Aliquam tristique diam turpis. Donec quis elit nec odio malesuada porta ut quis ipsum. Nullam in pulvinar risus. Donec molestie bibendum facilisis. Praesent dictum augue eu eros blandit scelerisque vitae quis dolor. Fusce consectetur dui nisl, et pellentesque mauris finibus sed. In hac habitasse platea dictumst. Phasellus vitae ex eleifend, malesuada orci id, rhoncus ex. Ut pulvinar neque in lectus sodales, sed blandit nisl maximus. Vivamus condimentum felis eu lacus molestie euismod nec eget metus. Maecenas interdum aliquam nibh ut imperdiet. Ut non urna nec odio consequat pretium. Nulla fringilla ultrices tortor. Curabitur quis sodales nulla. Ut faucibus dui turpis.\n\n
Cras non turpis vehicula, cursus ante ac, tempor purus. Suspendisse porttitor nisl enim, quis venenatis risus rutrum in. Donec a maximus quam, eget aliquam erat. Etiam dapibus tortor eu finibus imperdiet. Sed pellentesque enim turpis, at fermentum sapien feugiat vel. Duis magna lectus, congue et fringilla non, eleifend vitae lacus. Donec tincidunt nisl lacus.\n\n
Integer dictum lacus ultricies lectus vehicula, ac faucibus odio pulvinar. Aliquam erat volutpat. Pellentesque tempor leo neque, eu rhoncus felis posuere consequat. Morbi faucibus, nibh in tempor placerat, odio tortor feugiat purus, vitae pharetra est augue ac sem. Aenean sit amet erat posuere, pulvinar ante at, imperdiet mi. Sed varius ex at purus commodo, eget vulputate metus auctor. In ac dui posuere, laoreet lacus sed, pharetra dui. Fusce egestas quis neque vel pulvinar. Nulla non lacus a nunc bibendum commodo. Nam et volutpat turpis. Suspendisse in tortor dui. Pellentesque eros urna, mollis auctor hendrerit eget, placerat a nisi. Ut pulvinar vitae leo nec sollicitudin. Nunc eget odio a tortor faucibus vulputate at et est. Donec sodales et dolor in bibendum. Aliquam dictum, augue sit amet auctor blandit, nisl urna malesuada sem, nec vestibulum justo turpis et libero.
    </string>
    <string name="le_bouton">Le bouton</string>

    <string name="title_activity_mon_profil">Mon profil</string>

    <string name="title_activity_mon_panier">Mon panier</string>
    <string name="list_header_next_week">La semaine prochaine</string>
    <string name="list_header_next_month">Le mois prochain</string>
    <string name="contentDescription">Image choisie pour représenter le concert</string>

    <string name="title_activity_politique_securite">Politique de sécurité</string>

    <string name="title_activity_mon_historique">Mon historique</string>
    <string name="list_header_historique">Historique de vos concerts</string>

    <string name="title_activity_mes_notifications">Mes notifications</string>
    <string name="list_header_notifications">Donnez-nous votre avis sur ces concerts :</string>

    <string name="title_activity_recherche">Recherche</string>

    <string name="connection_inscription">Connexion/Inscription</string>

    <string name="title_activity_resultat_recherche">Résultats</string>
    <string name="list_header_region">Dans votre région</string>
    <string name="list_header_france">En France</string>

    <string name="title_activity_artiste">Artiste</string>

    <string name="title_activity_concert">Concert</string>

    <string name="title_activity_achat_billet">Achat</string>

    <string name="title_activity_avis">Avis</string>

    <string name="title_activity_paiement">Paiement</string>

    <string name="title_activity_gerer_artiste">Gérer les artistes</string>

    <string name="action_mon_profil">Mon profil</string>
    <string name="action_rechercher">Rechercher un concert</string>

    <string name="bouton_recherche">Rechercher</string>

    <string-array name="spinnerItems">
        <item>Fosse</item>
        <item>Zone A</item>
        <item>Zone B</item>
        <item>Zone C</item>
    </string-array>

    <string-array name="quantitespinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="label_accueil">Les prochains concerts</string>
    <string name="button_achat_billet">Utiliser la carte enregistrée</string>
    <string name="emplacement">Emplacement</string>
    <string name="acheter_billet">Acheter vos billets</string>
    <string name="quantite">Quantité :</string>
    <string name="dans_region">Dans votre région</string>
    <string name="suivre_artiste">Suivre l\'artiste</string>
    <string name="en_france">En France</string>
    <string name="votre_avis">Votre avis sur ce concert nous intéresse</string>
    <string name="ambiance">Ambiance</string>
    <string name="jeu_scène">Jeu de scène</string>
    <string name="qualité_sonore">Qualité Sonore</string>
    <string name="ajout_commentaire">Ajouter un commentaire</string>
    <string name="button_valider">Valider</string>
    <string name="acheter_billet2">Acheter un billet</string>
    <string name="information_salle_prix">Informations sur le concert et sur la salle</string>
    <string name="infos_texte">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis turpis urna, vel faucibus purus laoreet quis. Curabitur accumsan sed turpis non tristique. Nullam moles</string>
    <string name="avis_personnes">Avis des personnes ayant assistées au concert</string>
    <string name="button_donner_avis">Je donne mon avis !</string>
    <string name="artiste_suivis">Artiste(s) que vous suivez</string>
    <string name="label_donner_avis">Donner un avis sur les concerts</string>
    <string name="semaine_prochaine">La semaine prochaine</string>
    <string name="mois_prochain">Le mois prochain</string>
    <string name="prénom">Prénom</string>
    <string name="email">E-mail</string>
    <string name="nom">Nom</string>
    <string name="accessibilite">Accessiblité</string>
    <string name="perimetre">Périmètre de recherche</string>
    <string name="artiste_suivi">Artiste(s) suivi(s)</string>
    <string name="mot2passe">Mot de passe</string>
    <string name="moyens_paiement">Moyens de paiement</string>
    <string name="button_gerer">Gérer</string>
    <string name="button_appliquer">Appliquer ces modifications</string>
    <string name="carte_enregistre">Carte(s) enregistrée(s)</string>
    <string name="carte1">58** **** **** ****</string>
    <string name="carte2">73** **** **** ****</string>

    <string name="button_utiliser">Utiliser</string>
    <string name="label_ajouter_carte">Ajouter une carte</string>
    <string name="button_ajouter_carte">Ajouter la carte et Payer</string>
    <string name="button_rechercher">Ajouter une carte</string>
    <string name="label_smart">Smart Search</string>
    <string name="label_barre_recherche1">Artiste, concert, date</string>
    <string name="label_recherche_approfondi">Recherche approfondie</string>












</resources>
