<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_concert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ihm.ihm.Concert"
    tools:showIn="@layout/app_bar_concert">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/inframan"
        android:id="@+id/imageView4"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/acheter_billet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:id="@+id/button12"
        android:layout_alignStart="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
         />

    <TextView
        android:text="@string/information_salle_prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button12"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/textView24"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:text="@string/infos_texte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView26"
        android:layout_below="@+id/textView24"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/avis_personnes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView26"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="17dp"
        android:id="@+id/textView27" />

    <Button
        android:text="@string/button_donner_avis"
        android:layout_width="wrap_content"
        android:contentDescription="@string/button_donner_avis"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView27"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button"
        android:id="@+id/liste_commentaire" />

</RelativeLayout>
