<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_avis"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ihm.ihm.Avis"
    tools:showIn="@layout/app_bar_avis">

    <ImageView
        app:srcCompat="@drawable/louisarmstrong"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="1000dp"
        android:maxHeight="1000dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="3dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/votre_avis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginTop="18dp"
        android:id="@+id/textView4" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/ratingBar" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:layout_alignEnd="@+id/ratingBar"
        android:id="@+id/ratingBar2" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar2"
        android:layout_alignEnd="@+id/ratingBar2"
        android:id="@+id/ratingBar3" />

    <TextView
        android:text="@string/jeu_scène"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar2"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="16dp"
        android:id="@+id/textView9" />

    <TextView
        android:text="@string/ambiance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/ratingBar"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:text="@string/qualité_sonore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="20dp"
        android:layout_alignTop="@+id/ratingBar"
        android:layout_toEndOf="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:id="@+id/editText2"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ratingBar3"
        android:layout_alignEnd="@+id/ratingBar3"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:hint="@string/ajout_commentaire"
        android:inputType="text|textMultiLine"
         />

    <Button
        android:text="@string/button_valider"
        android:contentDescription="@string/button_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/editText2" />

</RelativeLayout>
