<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_achat_billet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ihm.ihm.Achat_billet"
    tools:showIn="@layout/app_bar_achat_billet">

    <ImageView
        app:srcCompat="@drawable/louisarmstrong"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="1000dp"
        android:maxHeight="1000dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="3dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/acheter_billet"
        android:contentDescription="@string/acheter_billet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:id="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:text="@string/emplacement"
        android:contentDescription="@string/emplacement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:text="@string/button_achat_billet"
        android:contentDescription="@string/button_achat_billet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

    <Button
        android:text="@string/acheter_billet"
        android:contentDescription="@string/acheter_billet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="vers_paiement" />

    <TextView
        android:text="@string/quantite"
        android:contentDescription="@string/quantite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignBottom="@+id/textView13"


        android:layout_toEndOf="@+id/textView13"
        android:layout_alignTop="@+id/textView13"
        android:checkedButton="@+id/radioButton2">
        <RadioButton
            android:text="Oui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_alignBaseline="@+id/textView13"
            android:layout_alignBottom="@+id/textView13"
            android:layout_alignEnd="@+id/button4" />

        <RadioButton
            android:text="Non"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_alignBaseline="@+id/radioButton2"
            android:layout_alignBottom="@+id/radioButton2"
            android:layout_toEndOf="@+id/radioButton2"
            android:layout_marginStart="14dp" />
    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:drawSelectorOnTop="true"
        android:entries="@array/spinnerItems"
        android:layout_above="@+id/textView13"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView13" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_above="@+id/textView12"
        android:entries="@array/quantitespinner"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/spinner" />


</RelativeLayout>
